--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,12 @@
             android:configChanges="orientation|keyboardHidden" >
         </activity>
         <activity
+            android:name=".ActivityChoose_Curso"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden" >
+        </activity>
+        <activity
             android:name=".ActivityLogEasy"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
