--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,9 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.GET_TASKS" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
-   <application android:allowBackup="true"
+    <application android:allowBackup="true"
         android:icon="@drawable/blueicon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
